--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-images": "^1.2.0-beta.7",
-    "react-photo-gallery": "^8.0.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-masonry-component": "^6.3.0",
     "react-simple-image-slider": "^2.3.0",
     "sass": "^1.45.0"
   },
